--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,42 @@
-target/
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Build tool #
+##############
+target
+.idea
+*.iml
+*.im
+*.ipr
+*.iws
+.settings
+.project
+.classpath
+
+# OS generated files #
+######################
+*~
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+activemq-data
+*.epoch
+*.log
+
+# Extra #
+#########
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
