--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.lscorcia</groupId>
     <artifactId>keycloak-cieid-provider</artifactId>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4</version>
     <packaging>jar</packaging>
 
     <name>Keycloak CIE ID Service Provider</name>
@@ -28,7 +28,7 @@
 
     <scm>
         <developerConnection>scm:git:https://github.com/lscorcia/keycloak-cieid-provider.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>1.0.4</tag>
     </scm>
 
     <dependencies>
