--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.lscorcia</groupId>
     <artifactId>keycloak-cieid-provider</artifactId>
-    <version>26.5.3</version>
+    <version>26.5.3-BIS</version>
     <packaging>jar</packaging>
 
     <name>Keycloak CIE ID Service Provider</name>
